<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pressure_sensor_node</name>
  <version>0.0.0</version>
  <description>ROS2 Node for BMP390 Pressure Sensor on Jetson Orin Nano</description>
  <maintainer email="eng.ibrahim.aldabbagh@gmail.com">aldabbag</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
    <!-- External Libraries -->
  <exec_depend>adafruit-circuitpython-bmp3xx</exec_depend>
  <exec_depend>adafruit-blinka</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
