cmake_minimum_required(VERSION 3.10)
project(quadmmwave_slam)
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(PCL REQUIRED COMPONENTS common filters registration)
find_package(pcl_conversions REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(quadmmwave_icp_core src/quadmmwave_icp_core.cpp)
ament_target_dependencies(quadmmwave_icp_core rclcpp sensor_msgs geometry_msgs pcl_conversions)
target_link_libraries(quadmmwave_icp_core ${PCL_LIBRARIES})
add_executable(quadmmwave_mapping src/quadmmwave_mapping.cpp)
ament_target_dependencies(quadmmwave_mapping rclcpp sensor_msgs geometry_msgs nav_msgs tf2_ros pcl_conversions)
target_link_libraries(quadmmwave_mapping ${PCL_LIBRARIES})
install(TARGETS quadmmwave_icp_core quadmmwave_mapping DESTINATION lib/${PROJECT_NAME})
install(DIRECTORY params launch DESTINATION share/${PROJECT_NAME})
ament_package()